<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:title="@string/option_title">
   	<com.easy.apps.autoscreenoff.AdmobPreference android:key="ad" />
    <CheckBoxPreference android:title="@string/enable_timer_title" android:summary="@string/enable_timer_summary" android:enabled="true" android:key="enableTimer" android:defaultValue="true"/>
    <CheckBoxPreference android:title="@string/enable_notify_title" android:summary="@string/enable_notify_summary" android:enabled="true" android:key="enableNotify" android:defaultValue="true"/>
   
    <Preference
    android:title="@string/more_app"
    android:summary="@string/more_app_summary">

    <intent 
        android:action="com.screenoff"
        android:targetPackage="com.easy.apps.autoscreenoff"
        android:targetClass="com.easy.apps.autoscreenoff.MainActivity"
    />
    </Preference>
    
     <Preference
    android:title="@string/network_app"
    android:summary="@string/network_app_summary">

    <intent 
        android:action="com.uninstall"
        android:targetPackage="com.easy.apps.autoscreenoff"
        android:targetClass="com.easy.apps.autoscreenoff.MainActivity"
    />
    </Preference>
    
</PreferenceScreen>